--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
@@ -27,6 +27,18 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest2">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 2
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest3">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 3
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CrimeRecord/edit">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New crime record
             </NavLink>
