--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
@@ -39,6 +39,18 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest4">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 4
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest5">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 5
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CrimeRecord/edit">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New crime record
             </NavLink>
