--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest2.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest2.razor
@@ -1,6 +1,7 @@
 ﻿@page "/quest2"
 @using System.Net.Http.Json
 @using LACrimes.Web.Blazor.Shared.Quest
+@using System.Text.Json
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
 @inject IJSRuntime jsRuntime
@@ -58,14 +59,37 @@
 
 	private async Task GetCrimeReports()
 	{
-		isLoading = true;
-		var response = await httpClient.GetFromJsonAsync<List<Quest2ReportDto>>($"api/quests/Quest2?crmCd={crmCd}&startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}");
-		isLoading = false;
-		if (response is null)
+		if (startDate > endDate)
 		{
-			await jsRuntime.InvokeVoidAsync("alert", "No data found");
+			await jsRuntime.InvokeVoidAsync("alert", "Start date cannot be greater than end date");
 			return;
 		}
-		quest2ReportDto = response;
+
+		try {
+			isLoading = true;
+			var response = await httpClient.GetFromJsonAsync<List<Quest2ReportDto>>($"api/quests/Quest2?crmCd={crmCd}&startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}");
+			isLoading = false;
+			if (response is null)
+			{
+				await jsRuntime.InvokeVoidAsync("alert", "No data found");
+				return;
+			}
+			quest2ReportDto = response;
+		}
+		catch (HttpRequestException ex)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", "Error: " + ex.Message);
+			isLoading = false;
+		}
+		catch (JsonException ex)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", "No report Found");
+			isLoading = false;
+		}
+		catch (Exception ex)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+		}
 	}
 }
