--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest1.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest1.razor
@@ -3,6 +3,7 @@
 @using LACrimes.Web.Blazor.Shared
 @using LACrimes.Web.Blazor.Shared.Quest
 @using System.ComponentModel.DataAnnotations
+@using System.Text.Json
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
 @inject IJSRuntime jsRuntime
@@ -21,6 +22,12 @@
 
     <button @onclick="FetchReports">Get Reports</button>
 </div>
+
+@if (isLoading)
+{
+	<div class="spinner-border text-secondary" role="status">
+	</div>
+}
 
 @if (quest1ReportDto != null)
 {
@@ -46,19 +53,45 @@
 }
 
 @code {
+	private bool isLoading = false;
     private DateTime startDate = DateTime.Today;
     private DateTime endDate = DateTime.Today;
     private List<Quest1ReportDto>? quest1ReportDto = null;
 
     private async Task FetchReports()
     {
-        var apiUrl = $"api/quests/Quest1?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}";
-        var response = await httpClient.GetFromJsonAsync<List<Quest1ReportDto>>(apiUrl);
-        if (response is null)
+		if (startDate > endDate)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", "Start date cannot be greater than end date");
+			return;
+		}
+
+        try {
+			isLoading = true;
+            var apiUrl = $"api/quests/Quest1?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}";
+            var response = await httpClient.GetFromJsonAsync<List<Quest1ReportDto>>(apiUrl);
+			isLoading = false;
+            if (response is null)
+            {
+                await jsRuntime.InvokeVoidAsync("alert", "No data found");
+                return;
+            }
+            quest1ReportDto = response.OrderByDescending(r => r.TotalReports).ToList();
+		}
+		catch (HttpRequestException ex)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+		}
+        catch (JsonException ex)
         {
-            await jsRuntime.InvokeVoidAsync("alert", "No data found");
-            return;
+            await jsRuntime.InvokeVoidAsync("alert", "No report Found");
+			isLoading = false;
         }
-        quest1ReportDto = response.OrderByDescending(r => r.TotalReports).ToList();
+        catch (Exception ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+        }
     }
 }
