--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest3.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest3.razor
@@ -1,6 +1,7 @@
 ﻿@page "/quest3"
 @using System.Net.Http.Json
 @using LACrimes.Web.Blazor.Shared.Quest
+@using System.Text.Json
 @inject HttpClient httpClient
 @inject IJSRuntime jsRuntime
 
@@ -54,14 +55,38 @@
 
     private async Task GetMostCommonCrime()
     {
-        isLoading = true;
-        var response = await httpClient.GetFromJsonAsync<List<Quest3ReportDto>>($"api/quests/Quest3?date={date:yyyy-MM-dd}");
-        isLoading = false;
-        if (response is null)
+		if (date == DateTime.MinValue)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", "Please select a date");
+			return;
+		}
+
+        try
         {
-            await jsRuntime.InvokeVoidAsync("alert", "No data found");
-            return;
+            isLoading = true;
+            var response = await httpClient.GetFromJsonAsync<List<Quest3ReportDto>>($"api/quests/Quest3?date={date:yyyy-MM-dd}");
+            isLoading = false;
+            if (response is null)
+            {
+                await jsRuntime.InvokeVoidAsync("alert", "No data found");
+                return;
+            }
+            quest3ReportDto = response;
         }
-        quest3ReportDto = response;
+        catch (HttpRequestException ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+        }
+        catch (JsonException ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", "No report Found");
+			isLoading = false;
+        }
+        catch (Exception ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+        }
     }
 }
