--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest6.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest6.razor
@@ -1,5 +1,6 @@
 ﻿@page "/quest6"
 @using LACrimes.Web.Blazor.Shared.Quest
+@using System.Text.Json
 @inject HttpClient Http
 @inject IJSRuntime jsRuntime
 
@@ -67,22 +68,48 @@
 }
 
 @code {
-	private bool isLoading = false;
-	private DateTime startDate = DateTime.Now.AddDays(-7);
+
+    private bool isLoading = false;
+    private DateTime startDate = DateTime.Now.AddDays(-7);
     private DateTime endDate = DateTime.Now;
     private Quest6ReportDto? quest6ReportDto;
 
     private async Task GetQuest6Data()
     {
-		isLoading = true;
-		var url = $"api/Quests/Quest6?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}";
-        var result = await Http.GetFromJsonAsync<Quest6ReportDto>(url);
-        isLoading = false;
-		if (result is null)
-		{
-			await jsRuntime.InvokeVoidAsync("alert", "No data found");
-			return;
+
+        if (startDate > endDate)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", "Start date cannot be greater than end date");
+            return;
+        }
+
+        try
+        {
+            isLoading = true;
+            var url = $"api/Quests/Quest6?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}";
+            var result = await Http.GetFromJsonAsync<Quest6ReportDto>(url);
+            isLoading = false;
+            if (result is null)
+            {
+                await jsRuntime.InvokeVoidAsync("alert", "No data found");
+                return;
+            }
+            quest6ReportDto = result;
+        }
+        catch (HttpRequestException ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
 		}
-		quest6ReportDto = result;
-	}
+        catch (JsonException ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", "No report Found");
+			isLoading = false;
+		}
+        catch (Exception ex)
+        {
+            await jsRuntime.InvokeVoidAsync("alert", ex.Message);
+			isLoading = false;
+		}
+    }
 }
