--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest7.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest7.razor
@@ -1,12 +1,13 @@
-﻿@page "/quest4"
+﻿@page "/quest7"
 @using System.Net.Http.Json
 @using LACrimes.Web.Blazor.Shared.Quest
+@using System.Globalization
 @using System.Text.Json
-@inject HttpClient httpClient
+@inject HttpClient Http
 @inject IJSRuntime jsRuntime
 
-<h3>Quest 4</h3>
-<h6>Find the average number of crimes occurred per hour (24 hours) for a specific date range.</h6>
+<h3>Quest 7</h3>
+<h6>Find the pair of crimes that has co-occurred in the area with the most reported incidents for a specific date range.</h6>
 
 <div>
     <label for="startDate">Start Date:</label>
@@ -15,7 +16,7 @@
     <label for="endDate">End Date:</label>
     <input type="date" id="endDate" @bind="endDate" />
 
-    <button @onclick="FetchReports">Get Reports</button>
+    <button @onclick="GetQuest7Data">Get Reports</button>
 </div>
 
 @if (isLoading)
@@ -24,52 +25,58 @@
     </div>
 }
 
-@if (quest4ReportDto != null)
+@if (quest7ReportDto != null)
 {
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Hour</th>
-                <th>Average Crimes</th>
+                <th>Area Name</th>
+                <th>Crime Code 1</th>
+                <th>Crime 1 Description</th>
+                <th>Crime Code 2</th>
+                <th>Crime 2 Description</th>
+                <th>Co-Occurrences</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var report in quest4ReportDto)
-            {
-                <tr>
-                    <td>@report.Hour</td>
-                    <td>@report.AverageCrimes</td>
-                </tr>
-            }
+            <tr>
+                <td>@quest7ReportDto.AreaName</td>
+                <td>@quest7ReportDto.CrimeCode1</td>
+                <td>@quest7ReportDto.Crime1Desc</td>
+                <td>@quest7ReportDto.CrimeCode2</td>
+                <td>@quest7ReportDto.Crime2Desc</td>
+                <td>@quest7ReportDto.CoOccurrences</td>
+            </tr>
         </tbody>
     </table>
 }
 
 @code {
     private bool isLoading = false;
-    private DateTime startDate = DateTime.Today;
+    private DateTime startDate = DateTime.Today.AddMonths(-3);
     private DateTime endDate = DateTime.Today;
-    private List<Quest4ReportDto>? quest4ReportDto = null;
+    private Quest7ReportDto? quest7ReportDto;
 
-    private async Task FetchReports()
+    private async Task GetQuest7Data()
     {
-        if (startDate > endDate)
-        {
-            await jsRuntime.InvokeVoidAsync("alert", "Start date cannot be greater than end date");
-            return;
-        }
+
+		if (startDate > endDate)
+		{
+			await jsRuntime.InvokeVoidAsync("alert", "Start date cannot be greater than end date");
+			return;
+		}
 
         try
         {
             isLoading = true;
-            var response = await httpClient.GetFromJsonAsync<List<Quest4ReportDto>>($"api/quests/Quest4?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}");
+            var response = await Http.GetFromJsonAsync<Quest7ReportDto>($"api/Quests/Quest7?startDate={startDate:yyyy-MM-dd}&endDate={endDate:yyyy-MM-dd}");
             isLoading = false;
             if (response is null)
             {
                 await jsRuntime.InvokeVoidAsync("alert", "No data found");
                 return;
             }
-            quest4ReportDto = response;
+            quest7ReportDto = response;
         }
         catch (HttpRequestException ex)
         {
@@ -88,4 +95,3 @@
         }
     }
 }
-
