--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
@@ -51,6 +51,42 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest6">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 6
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest7">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 7
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest8">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 8
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Quest9">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 9
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="quest10">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 10
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="quest11">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 11
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CrimeRecord/edit">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New crime record
             </NavLink>
