--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest11.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest11.razor
@@ -26,6 +26,13 @@
 
 @if (quest11Reports != null)
 {
+    <br />
+    <br />
+    <text>
+        Number of Reports : @quest11Reports.Count()
+    </text>
+    <br />
+    <br />
     <table class="table table-bordered">
         <thead>
             <tr>
