--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest5.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quest5.razor
@@ -54,7 +54,7 @@
 
 @code {
 	private bool isLoading = false;
-	private DateTime date;
+	private DateTime date = DateTime.Today;
 	private double minLat;
 	private double maxLat;
 	private double minLon;
