--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/NavMenu.razor
@@ -87,6 +87,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="quest12">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quest 12
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CrimeRecord/edit">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New crime record
             </NavLink>
