--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/MainLayout.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Layout/MainLayout.razor
@@ -1,23 +1,47 @@
 ﻿@inherits LayoutComponentBase
+@using LACrimes.Web.Blazor.Client.Extensions
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject AuthenticationStateProvider authStateProvider
+@inject NavigationManager navigationManager
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+<CascadingAuthenticationState>
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu />
         </div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+        <main>
+            <div class="top-row px-4">
+                <AuthorizeView>
+                    <Authorized>
+                        <a @onclick="Logout" href="javascrip:void(0)">Logout</a>
+                    </Authorized>
+                    <NotAuthorized>
+                        <a href="/login">Log in</a>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </div>
 
-<div id="blazor-error-ui" data-nosnippet>
-    An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
-    <span class="dismiss">🗙</span>
-</div>
+            <article class="content px-4">
+                @Body
+            </article>
+        </main>
+    </div>
+
+    <div id="blazor-error-ui" data-nosnippet>
+        An unhandled error has occurred.
+        <a href="." class="reload">Reload</a>
+        <span class="dismiss">🗙</span>
+    </div>
+</CascadingAuthenticationState>
+
+@code {
+    private async Task Logout()
+    {
+        var customAuthStateProvider = (CustomAuthenticationStateProvider)authStateProvider;
+        await customAuthStateProvider.UpdateAthenticationState(null);
+        navigationManager.NavigateTo("/", true);
+    }
+
+}
