--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Pages/Home.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/Components/Pages/Home.razor
@@ -1,7 +1,15 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Components.Authorization
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+        @if (context.User.Identity is not null) {
+            <h1>Hello, @context.User.Identity.Name</h1>
+        }
+    </Authorized>
+    <NotAuthorized>
+        <h1>Please Login</h1>
+    </NotAuthorized>
+</AuthorizeView>
