--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/CrimeRecord/CrimeRecordEdit.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/CrimeRecord/CrimeRecordEdit.razor
@@ -189,7 +189,7 @@ else
 
 		<div class="row mt-2">
 			<div class="col">
-				<Button Color="ButtonColor.Success" @onclick="OnSave"> Secondary </Button>
+				<Button Color="ButtonColor.Success" @onclick="OnSave"> Submit </Button>
 				<Button color="ButtonColor.Secondary" @onclick="OnCancel">Back</Button>
 			</div>
 		</div>
