--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quests/Quest12.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quests/Quest12.razor
@@ -77,7 +77,7 @@ if (quest12Reports != null)
         if (!String.IsNullOrWhiteSpace(token))
         {
             httpClient.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("bearer", token);
-            isLoading = false;
+            isLoggingIn = false;
         }
         else
         {
