--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quests/Quest13.razor
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/Pages/Quests/Quest13.razor
@@ -104,7 +104,7 @@ else
 		if (!String.IsNullOrWhiteSpace(token))
 		{
 			httpClient.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("bearer", token);
-			isLoading = false;
+			isLoggingIn = false;
 		}
 		else
 		{
